testsuite/poke.pkl/structs-diag-1.pk
/* { dg-do compile } */

defvar s = struct
           {
             a = 10, /* { dg-error "duplicated" } */
             b = 20,
             a = 30
           };
